# StratCP

./: .gitignore  404.html  CONTRIBUTING.md  README.md  USAGE_SUMMARY.md  cns_tumor_subtype.py  idh_mut_status_pred.py  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
data/retfound_tasks/JSIEC/: action_similarity.npy  predicted_probabilities.npy  true_labels.npy
data/retfound_tasks/diabetic_retinopathy/: predicted_probabilities.npy  true_labels.npy
data/retfound_tasks/diabetic_retinopathy/stratcp_eval_results_diabetic/: baseline_eval.csv  conditional_eval.csv  stratcp_eval.csv  vanilla_eval.csv
data/retfound_tasks/glaucoma/: predicted_probabilities.npy  true_labels.npy
data/retfound_tasks/glaucoma/stratcp_eval_results_glaucoma/: baseline_eval.csv  conditional_eval.csv  stratcp_eval.csv
data/uni_pathology_tasks/cns_tumor_subtype/: ebrains_annotation.csv
data/uni_pathology_tasks/cns_tumor_subtype/stratcp_eval_results_grade_consist_True/: cp_vanilla_results_split_0_of_25.pkl  cp_vanilla_results_split_1_of_25.pkl  stratcp_results_split_0_of_25.pkl  top1_thresh_results_split_0_of_25.pkl  top1_thresh_results_split_1_of_25.pkl
data/uni_pathology_tasks/cns_tumor_subtype/uni_eval_results/: uni_results_dict.pkl
data/uni_pathology_tasks/idh_mutation_status_pred/: calib_test_splits_n_10.pkl
data/uni_pathology_tasks/idh_mutation_status_pred/model_checkpoint/: idh_mutation_status_pred_abmil.pt
data/uni_pathology_tasks/idh_mutation_status_pred/uni_eval_results/: uni_results_dict.pkl
examples/: simple_usage.py  utility_aware_cp.py
reference/: index.html
reproduction_code/retfound_tasks/: diabetic_retinopacy.py  glaucoma.py  jsiec_action.py
search/: search_index.json
src/: utils.py
src/cli/: __init__.py
src/config/: __init__.py
src/stratcp/: __init__.py  eval_utils.py  metrics.py  stratified.py  utils.py
src/stratcp/conformal/: core.py  scores.py  utility.py
src/stratcp/selection/: __init__.py  multiple.py  single.py  survival.py
tests/: __init__.py  test_foo.py  test_stratified.py  test_utility.py
tests/test_conformal/: __init__.py  test_scores.py
tests/test_selection/: __init__.py  test.ipynb  test_single.py
